--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -7,9 +7,10 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image: url('https://images.unsplash.com/photo-1581324098414-4df1b1c16d4a?auto=format&fit=crop&w=1950&q=80');
+      background-image: url('fondo.jpg');
       background-size: cover;
       background-position: center;
+      background-attachment: fixed;
       color: white;
       text-align: center;
     }
@@ -42,6 +43,7 @@
 
     .planeta img {
       width: 100%;
+      height: auto;
       border-radius: 15px;
     }
 
@@ -64,14 +66,13 @@
       <p>Planeta 1</p>
     </a>
     <a href="planeta2.html" class="planeta">
-      <img src="p2.png" alt="Planeta 2">
+      <img src="2.png" alt="Planeta 2">
       <p>Planeta 2</p>
     </a>
     <a href="planeta3.html" class="planeta">
-      <img src="p3.png" alt="Planeta 3">
+      <img src="p3.jpeg" alt="Planeta 3">
       <p>Planeta 3</p>
     </a>
   </div>
 </body>
 </html>
-
