--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -59,7 +59,7 @@
   </style>
 </head>
 <body>
-  <h1>Bienvenido a la constelación No Se Qué</h1>
+  <h1>Bienvenido a la constelación Areandina</h1>
   <div class="contenedor-planetas">
     <a href="planeta1.html" class="planeta">
       <img src="p1.png" alt="Planeta 1">
