--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -16,6 +16,7 @@
     }
 
     h1 {
+      margin: 0;
       padding: 40px 0 10px;
       font-size: 2.5em;
       text-shadow: 2px 2px 5px black;
@@ -24,16 +25,16 @@
     .contenedor-planetas {
       display: flex;
       justify-content: center;
-      gap: 60px; /* Separación aumentada entre planetas */
+      gap: 60px; /* Más separación entre planetas */
       padding: 30px;
       flex-wrap: wrap;
     }
 
     .planeta {
-      background: rgba(255, 255, 255, 0.2); /* Más clarito */
+      background: rgba(255, 255, 255, 0.2); /* Transparencia blanca */
       padding: 20px;
       border-radius: 20px;
-      width: 200px;
+      width: 220px; /* Mismo tamaño para todos */
       transition: transform 0.3s;
     }
 
@@ -45,10 +46,6 @@
       width: 100%;
       height: auto;
       border-radius: 15px;
-    }
-
-    .planeta.p3 {
-      width: 266px; /* 1/3 más que 200px */
     }
 
     .planeta p {
@@ -63,7 +60,7 @@
   </style>
 </head>
 <body>
-  <h1>Bienvenido a la constelación No Se Qué</h1>
+  <h1>Bienvenido a la constelación Areandina</h1>
   <div class="contenedor-planetas">
     <a href="planeta1.html" class="planeta">
       <img src="p1.png" alt="Planeta 1">
@@ -73,10 +70,5 @@
       <img src="2.png" alt="Planeta 2">
       <p>Planeta 2</p>
     </a>
-    <a href="planeta3.html" class="planeta p3">
-      <img src="P3.png" alt="Planeta 3">
-      <p>Planeta 3</p>
-    </a>
-  </div>
-</body>
-</html>
+    <a href="planeta3.html" class="planeta">
+      <
