--- a/Proyecto/Registro/index.html
+++ b/Proyecto/Registro/index.html
@@ -58,3 +58,28 @@
     <h2>Ingreso a la Constelación</h2>
     <input type="text" id="nombre" placeholder="Nombre del estudiante">
     <input type="password" id="clave" placeholder="Contraseña">
+    <br>
+    <button onclick="ingresar()">Ingresar</button>
+  </div>
+
+  <script>
+    function ingresar() {
+      const nombre = document.getElementById("nombre").value.trim();
+      const clave = document.getElementById("clave").value;
+
+      if (nombre === "") {
+        alert("Por favor, ingresa tu nombre.");
+        return;
+      }
+
+      if (clave !== "000") {
+        alert("Contraseña incorrecta. Pista: es 000");
+        return;
+      }
+
+      const nombreCodificado = encodeURIComponent(nombre);
+      window.location.href = 'https://cgviviana.github.io/Juego_Prueba/Proyecto/?nombre=' + nombreCodificado;
+    }
+  </script>
+</body>
+</html>
